Complete docs and makefiles
